2008-07-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/effects/volume/admin_gtk.py: check if the
	label is None before trying to call a method on it.

2008-07-24  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/admin/gtk/dialogs.py:
	Add Jordi and myself in authors.

2008-07-24  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	Fix the behavior of the component list right-click context menu
	to keep current selection if done on a select component.

2008-07-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Add back kill component in context menu, fixes #1064

2008-07-23  Arek Korbik  <arkadini@gmail.com>

	* flumotion/admin/gtk/componentlist.py (ComponentList.stateSet):
	Update PID dynamically, too. Fixes #993.

2008-07-23  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	* flumotion/wizard/overlaystep.py:
	Change the default overlay text to Flumotion, update tests.

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/production-wizard.glade:
	* data/glade/select-producers-wizard.glade:
	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	  Use producer, not source.

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/Makefile.am:
	  Add a missing glade file.

2008-07-22  Johan Dahlin  <johan@gnome.org>

	* data/glade/summary-wizard.glade:
	it should be Finish instead of Apply.

2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/configure/uninstalled.py.in:
	  Find writable build dir by looking at srcdir, not cwd.
	  Fixes distcheck for depending projects.

2008-07-22  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	Return untranslated singular strings with or
	without arguments.

2008-07-22  Johan Dahlin  <johan@flumotion.com>
