@@ -1,3 +1,12 @@
+2008-07-24  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/admin/gtk/main.py:
+	* flumotion/extern/Makefile.am:
+	* flumotion/extern/exceptiondialog.py:
+	Add an ExceptionDialog which is used to display an error message
+	when an handled exception occurs. Hook it up with the
+	gtk admin client.
+
 2008-07-24  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/effects/volume/admin_gtk.py: check if the
